--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <b>С днем рождения, Никита</b>
 <p>Лох ебаный</p>
-<img src="https://yadi.sk/i/T23r4vaO6eBguA" />
+<img src="https://s601sas.storage.yandex.net/rdisk/02f7918d408bcb4298e063eb6729a9a291b1606404ca3f093800a46007a276d7/602ad2cc/5Brek40iVKCvyzLzYcIl7Is9jhigOKg8Fn06Hkes-4LjspzL67xIBGgypAUt9v6omMGfOZGjVYq-A7KNIiozGw==?uid=0&filename=2021-02-05%2021-11-09%20%288%29.jpeg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=0&fsize=284052&hid=120d9f62bbc95d12f4828f011c82d390&media_type=image&tknv=v2&etag=06f60bc4b21af5884ddefb36947f42ea&rtoken=gDwrLp0eWvcG&force_default=no&ycrid=na-cdbd7fd3120c28e10672ac82bb7c4643-downloader18f&ts=5bb656f014b00&s=24f6f117095ea512b5422f774349dcf0ba98789d86749c0e3852ff1b651abd14&pb=U2FsdGVkX1-dwB5dBnHGil1CVpXQk_Hhe3cWHvFzY5BjpuHQyyHk36BcRvyOgwf8x_g5OELxVXew-yhxE2qKky_MEj0LoKtYJjp4Vnn3MTs" />
 </body>
 </html>
