--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <b>С днем рождения, Никита</b>
 <p>Лох ебаный</p>
-<img src="https://ibb.co/W2qHXq3" />
+<a href="https://ibb.co/W2qHXq3"><img src="https://i.ibb.co/W2qHXq3/2021-02-05-21-11-09-8.jpg" alt="2021-02-05-21-11-09-8" border="0"></a>
 </body>
 </html>
